# Orchestraw

./: README.md  pyproject.toml
src/orchestraw/: __main__.py  lyric.py  metaeditor.py  orchestraw.py
