[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Orchestraw"
version = "2.4.0"
authors = [
  { name="Crillerium", email="crillerium@outlook.com" },
]
description = "Orchestraw which downloads NCM music with metadata and lyric"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "mutagen"
]

[project.scripts]
ost = "orchestraw.__main__:main"
ostm = "orchestraw.metaeditor:main"
ostl = "orchestraw.lyric:main"

[project.urls]
Homepage = "https://github.com/crillerium/orchestraw"
Issues = "https://github.com/crillerium/orchestraw"
